Deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appnetwise-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: https://appnetwise.com/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appnetwise-service
            port:
              number: 8000
  tls:
  - hosts:
    - appnetwise.com
    secretName: appnetwise-tls
